# opsys-simulation

./: .gitignore  readme.md
.cache/clangd/index/: main.cpp.D948D03CFEEA3E60.idx
src/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  compile_commands.json  main.cpp  random_generator.h  readme.md  ready_queue.h  statistics.h
src/.cache/clangd/index/: algorithms.h.36FAE2EFEF6D3CE9.idx  arg_parser.h.27DB456DF65D575F.idx  main.cpp.D948D03CFEEA3E60.idx  process.h.FB1A10C3E2657EFC.idx  ready_queue.h.38C06B9F12385FCF.idx  simulation.h.4F270E77CA04038A.idx  time.h.0C684EB12E79E928.idx
src/process/: generate_processes.cpp  process.cpp  process.h
src/queue/: algorithms.h  ready_queue.cpp  ready_queue.h
src/random/: random.cpp  random.h
src/simulation/: events.cpp  simulation.cpp  simulation.h
src/time/: time.cpp  time.h
tests/: fcfs1.out  result.out  result2.out
